--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+
+        buildConfigField "int", "LIMIT", "100"
+        buildConfigField "String", "BASEURL", "\"https://private-34eb0-indonesianmountain.apiary-mock.com/\""
+        buildConfigField "int", "CACHETIME", "432000" // 5days
+
     }
     buildTypes {
         release {
