--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.jakewharton:butterknife:8.5.1'
+
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
@@ -60,9 +62,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
-    compile 'com.google.dagger:dagger:2.2'
-    testCompile 'junit:junit:4.12'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.2'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
+
+    annotationProcessor "com.google.dagger:dagger-compiler:2.9"
+    compile "com.google.dagger:dagger:2.9"
     provided 'javax.annotation:jsr250-api:1.0'
 }
